--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,7 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
-
+.env.te
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
